# R329-AIPU-gesture-recognition

./: LICENSE  README.md
ARM CHINA AIPU-build/aipu_tf_model_build_cfg/cfg/: build.cfg
ARM CHINA AIPU-build/aipu_tf_model_build_cfg/input/: max_dict3.npy
aipu-zhaifengyun/ARM CHINA AIPU-build/: model3_max_min_dict.py
aipu-zhaifengyun/ARM CHINA AIPU-build/aipu_tf_model_build_cfg/input/: min_dict3.npy
aipu-zhaifengyun/aipu_gesture/: CMakeLists.txt  fb_display.c  fbviewer.h  label.h  main.cpp  run.sh
aipu-zhaifengyun/aipu_gesture/include/: low_level_api.h  standard_api.h
aipu-zhaifengyun/aipu_gesture/include/kmd/: armchina_aipu.h
aipu-zhaifengyun/pytorch2tensorflow/: torch2tf_model_weight.py
aipu-zhaifengyun/pytorch2tensorflow/new_ckpt2/: model_ckpt.index
aipu-zhaifengyun/tensorflow-gesture/: model_eval.py
pytorch-gesture/: main.py  main_onnx.py  main_pb.py
pytorch2tensorflow/: torch2tf_node.py
pytorch2tensorflow/new_ckpt2/: checkpoint
tensorflow-gesture/: model3.py
